checker/tests/parsing/errors/top_level_garbage.mft
foo {}
=== error ===
Unrecognized token `foo` found at 0:3
Expected one of "fn", "trait" or "type"